--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Subdomain Takeover by Mohamed Haron</title>
+	<title>Subdomain Takeover by Elsfa7-110</title>
 
 	<!-- CSS -->
 	<!-- load bootstrap and our own personal stylesheet -->
@@ -14,14 +14,9 @@
 
 <div class="container">
 	<div class="jumbotron">
-		<h1>This page by Mohamed Haron!</h1>
+		<h1>This page by Elsfa7-110!</h1>
 		<h2>This will fix Soon!</h2>
-		
-		<p>This is the sample of Page by <a href="http://www.mohamedharon.com">Mohamed Haron</a></p>
-		<a href="https://www.mohamedharon.com" class="btn btn-primary btn-lg">View my blog </a>
-		<a href="https://hackerone.com/m7mdharoun" class="btn btn-primary btn-lg">View my HackerOne Profile </a>
 	
-
 
 	</div>
 </div>
